Add thumbnail and header for website updated post, hahaha

--- a/_posts/2024-01-04-mottos.md
+++ b/_posts/2024-01-04-mottos.md
@@ -22,7 +22,6 @@ I pronounce this acronym like "Arrow"
 
 Awaken. Adventure. Inspire. Retire.
 
-
 I view this as a healthy cycle of states that members of a community might journey through.
 
 You "Awaken" when you first join a community, or "Reawaken" if re-discovering it.
@@ -33,7 +32,7 @@ You "Inspire" when you have spurred creativity in others, and encouraged them to
 
 And we all "Retire" one day. There is no other choice.
 
-I pronounce this acronym like "Air:
+I pronounce this acronym like "Air"
 
 
 #### M.T.G.A
@@ -47,5 +46,16 @@ But I think that the "Make <thing> Great Again" sentiment can have some validiti
 
 I think, for this phrase to be useful, we need to throw away any notions of toxic politics, walls, or insurrections.
 
-I don't know how to pronounce this one yet, but "mutt-aga" is what I've got so far, haha
+I don't know how to pronounce this one yet, but "mutt-uh-guh" is what I've got so far, haha
+
+
+
+
+
+Thoughts:
+
+Uninclusive communities vs inclusive ones. Uninclusiveness is maybe ok, as long as there isn't undue harm? Eg: Sorry, can't join our exclusive club, vs physically or emotionally attacking people.
+
+The hope is, that inclusive communities will out-survive uninclusive ones, since their member pool can be much larger. But growing pains risk self-extinction, so it's a trade-off
+
 
