Add some organized links to misc for now

--- a/_posts/2024-01-04-blog-bugs.md
+++ b/_posts/2024-01-04-blog-bugs.md
@@ -8,6 +8,7 @@ categories: misc
 This is just a list of known issues about the current blog you're reading.
 
 Issues:
+- Category links do not work
 - Favicon skulled
 - Home page typing message should be centered
 - Missing thumbnails / headers for various pages
