Add a few more pages

--- a/_posts/2024-01-04-mottos.md
+++ b/_posts/2024-01-04-mottos.md
@@ -39,6 +39,7 @@ I pronounce this acronym like "Air"
 
 Make Temuair Great Again
 
+TODO: consider MDAGA instead??
 
 This is a trigger phrase for many - there is a lot of baggage attached.
 
