--- a/_posts/2024-01-24-typos.md
+++ b/_posts/2024-01-24-typos.md
@@ -7,8 +7,13 @@ thumbnail: thumbnails/typos-thumbnail.png
 ---
 Here's a short list of some typos in Darkages game text:
 
-TODO: get screenshots
-- Can't deposit Yowien Territory gear to banker easily, need to append a "1" for some reason!
+- You can't deposit Yowien Territory gear in a bank easily. You need to append a "1" to the item names for some reason! (apparently someone used a glitch to duplicate too many of the original items!)
+
+
+![Append 1 Item Name](/assets/img/typos/yt-gear-1-appended.png)
+
+
+Coming Soon: more screenshots!
 - Andorian Greaves show up under "Greases" category in bank?
 - Loures Soliders?
 - Jihad vs Jyhad in Pravat Sign?
