Update mottos slightly

--- a/_posts/2024-01-04-mottos.md
+++ b/_posts/2024-01-04-mottos.md
@@ -35,16 +35,16 @@ And we all "Retire" one day. There is no other choice.
 I pronounce this acronym like "Air"
 
 
-#### M.T.G.A
+#### M.T.F.A
 
-Make Temuair Great Again
+Make Temuair Fun Again
 
-TODO: consider MDAGA instead??
+TODO: consider MTGA, MDAFA, or MDAGA instead??
 
 This is a trigger phrase for many - there is a lot of baggage attached.
 
-But I think that the "Make <thing> Great Again" sentiment can have some validitiy. Sometimes, there can be certain aspects of the past, which have been lost. If those lost things were generally positive, and desireable by nearly all members of a community, then it might be worth attempting to revive those lost aspects. Of course we can never 100% replicate the past - we'd need a time machine. But we can make a valiant effort to discover and mimic what was lost, in an attempt to rekindle a dying flame.
+But I think that the "Make <thing> <better> Again" sentiment can have some validitiy. Sometimes, there can be certain aspects of the past, which have been lost. If those lost things were generally positive, and desireable by nearly all members of a community, then it might be worth attempting to revive those lost aspects. Of course we can never 100% replicate the past - we'd need a time machine. But we can make a valiant effort to discover and mimic what was lost, in an attempt to rekindle a dying flame.
 
 I think, for this phrase to be useful, we need to throw away any notions of toxic politics, walls, or insurrections.
 
-I don't know how to pronounce this one yet, but "mutt-uh-guh" is what I've got so far, haha
+I don't know how to pronounce this one yet, but "mutt-uh-fuh" is what I've got so far, haha
