Update piano post

--- a/_posts/2024-01-31-fix-piano.md
+++ b/_posts/2024-01-31-fix-piano.md
@@ -7,7 +7,9 @@ header: thumbnails/piano-glue-header.png
 thumbnail: thumbnails/piano-glue-thumbnail.png
 ---
 
-I accidentally broke my piano earlier this year, and I've been meaning to fix it for weeks. However I kept getting distracted by Temuair, so I decided to take a break to focus on fixing this beauty.
+I accidentally broke my piano earlier this year, and I've been meaning to fix it for weeks.
+
+However I kept getting distracted by Temuair, so I decided to take a 100% innocent, randomly timed break, to focus on fixing this beauty.
 
 
 # Problem
@@ -22,14 +24,19 @@ I had dealt with similar problems in the past, so figured I'd open it up, and ta
 
 Ah. The metal hammer part had broken off from its plastic encasing, and couldn't properly hit the "thing-a-ma-jig", to complete a circuit and create sound (or something along those lines)
 
-Many other keys were nearly broken, or very far along in the breaking process.
+Many other keys were nearly broken, or very far along in the breaking process, so I figured I should take a look at all / most of the keys.
 
-I know how to fix this!! Glueeeeeeeeeee!
-
+Oh! I know how to fix this!! Glueeeeeeeeeee!
 
 # Fixing
 
 I decided to turn my regular piano keys into "Reinforced Piano Keys", and had to remove them all, to do so.
+
+For more context, this Roland digital keyboard was purchased around 1999 or 2000.
+
+Conveniently around the same time that USDA was released!
+
+Fate?!
 
 ![Removing Keys](/assets/img/irl/piano-glue/most-keys-removed.png)
 
@@ -37,7 +44,11 @@ It took longer than I had wanted, but I eventually removed them all!
 
 ![All Keys Removed](/assets/img/irl/piano-glue/all-keys-removed.png)
 
-I just used some cheap 5-minute epoxy, to glue the broken keys back together, or reinforce some nearly-broken keys
+I just used some cheap 5-minute epoxy, to glue the broken keys back together, or reinforce some nearly-broken keys.
+
+Glue time! :DDD
+
+(Can you spot the key that stabbed me?!)
 
 ![Glue Time](/assets/img/irl/piano-glue/glue-time.png)
 
