--- a/_posts/2024-01-31-fix-piano.md
+++ b/_posts/2024-01-31-fix-piano.md
@@ -11,6 +11,11 @@ I accidentally broke my piano earlier this year, and I've been meaning to fix it
 
 However I kept getting distracted by Temuair, so I decided to take a 100% innocent, randomly timed break, to focus on fixing this beauty.
 
+It's a Roland HP-530 digital piano, originally from [1995](https://cdn.roland.com/assets/media/pdf/HP-530_330_OM.pdf).
+
+I didn't get mine until around 1999, though. Almost 25 years ago, eh?
+
+Mine keeps breaking every 5 years, but it's amazing how long things can last with a bit of care and maintenance!
 
 # Problem
 
