Shouldn't use multiple top level headers apparently

--- a/_posts/2024-01-31-fix-piano.md
+++ b/_posts/2024-01-31-fix-piano.md
@@ -17,7 +17,7 @@ I didn't get mine until around 1999, though. Almost 25 years ago, eh?
 
 Mine keeps breaking every 5 years, but it's amazing how long things can last with a bit of care and maintenance!
 
-# Problem
+## Problem
 
 Some of the keys were uneven, and weren't playing their sounds as expected
 
@@ -33,7 +33,7 @@ Many other keys were nearly broken, or very far along in the breaking process, s
 
 Oh! I know how to fix this!! Glueeeeeeeeeee!
 
-# Fixing
+## Fixing
 
 I decided to turn my regular piano keys into "Reinforced Piano Keys", and had to remove them all, to do so.
 
@@ -58,7 +58,7 @@ Glue time! :DDD
 ![Glue Time](/assets/img/irl/piano-glue/glue-time.png)
 
 
-# Fixed
+## Fixed
 
 Did it work?! I sure hope so!!
 
