--- a/_posts/2024-01-31-fix-piano.md
+++ b/_posts/2024-01-31-fix-piano.md
@@ -21,11 +21,11 @@ Mine keeps breaking every 5 years, but it's amazing how long things can last wit
 
 Some of the keys were uneven, and weren't playing their sounds as expected
 
-![Uneven Keys](/assets/img/irl/piano-glue/uneven-keys.png)
+![Uneven Keys](/assets/img/irl/piano-glue/uneven-keys.png){: width="100%" }
 
 I had dealt with similar problems in the past, so figured I'd open it up, and take a look.
 
-![Broken Hammer](/assets/img/irl/piano-glue/broken-hammer.png)
+![Broken Hammer](/assets/img/irl/piano-glue/broken-hammer.png){: width="100%" }
 
 Ah. The metal hammer part had broken off from its plastic encasing, and couldn't properly hit the "thing-a-ma-jig", to complete a circuit and create sound (or something along those lines)
 
@@ -43,11 +43,11 @@ Conveniently around the same time that USDA was released!
 
 Fate?!
 
-![Removing Keys](/assets/img/irl/piano-glue/most-keys-removed.png)
+![Removing Keys](/assets/img/irl/piano-glue/most-keys-removed.png){: width="100%" }
 
 It took longer than I had wanted, but I eventually removed them all!
 
-![All Keys Removed](/assets/img/irl/piano-glue/all-keys-removed.png)
+![All Keys Removed](/assets/img/irl/piano-glue/all-keys-removed.png){: width="100%" }
 
 I just used some cheap 5-minute epoxy, to glue the broken keys back together, or reinforce some nearly-broken keys.
 
@@ -55,7 +55,7 @@ Glue time! :DDD
 
 (Can you spot the key that stabbed me?!)
 
-![Glue Time](/assets/img/irl/piano-glue/glue-time.png)
+![Glue Time](/assets/img/irl/piano-glue/glue-time.png){: width="100%" }
 
 
 ## Fixed
