Add another picture to piano post

--- a/_posts/2024-01-31-fix-piano.md
+++ b/_posts/2024-01-31-fix-piano.md
@@ -60,9 +60,13 @@ Glue time! :DDD
 
 ## Fixed
 
-Did it work?! I sure hope so!!
+The keys got kinda fixed!
 
-Here's a playlist of Temuair Music that I hope to add to: [Temuair Music](https://www.youtube.com/watch?v=8GWSxaos-ME&list=PL6LD2x2A2qLFEAd6xN69dE-YgEIrYOFZw)
+![Glue Time](/assets/img/irl/piano-glue/fixed.png){: width="100%" }
+
+Here's a playlist of Temuair Music that I hope to add to: [Temuair Music](https://www.youtube.com/watch?v=bBbsMw_iS-A&list=PL6LD2x2A2qLFEAd6xN69dE-YgEIrYOFZw&index=8)
+
+(Foreshadowing: the poor ol' thing continued to fall apart from Sgrios music, and I started looking into options for a new piano...)
 
 
 
